update [ catch error in login, login controller add rate limiting, swagger annotation minor changes]
